--- a/MyWebsite/Views/Shared/_LayoutAdmin.cshtml
+++ b/MyWebsite/Views/Shared/_LayoutAdmin.cshtml
@@ -1,19 +1,23 @@
-﻿<!DOCTYPE html>
+﻿@{
+    var message = TempData["message"] as string;
+}
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - MyCMS Admin</title>
+    <title>@ViewData["Title"] - MyWebsite Admin</title>
     <script type="importmap"></script>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/MyCMS.styles.css" asp-append-version="true" />
+    @* <link rel="stylesheet" href="~/css/style.css" asp-append-version="true" /> *@
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">MyCMS</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">MyWebsite</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -35,14 +39,23 @@
         </main>
     </div>
 
+    @if (message != null)
+    {
+        TempData["message"] = null;
+        <script>
+            alert('@message');
+        </script>
+    }
+
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2025 - MyCMS - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2025 - MyWebsite - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
-    @await RenderSectionAsync("Scripts", required: false)
+    @* @await RenderSectionAsync("Scripts", required: false)
+    @RenderSection("Scripts", required: false) *@
 </body>
 </html>
