--- a/MyWebsite/Views/User/Index.cshtml
+++ b/MyWebsite/Views/User/Index.cshtml
@@ -14,57 +14,42 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.UserID)
-            </th>
-            <th>
                 @Html.DisplayNameFor(model => model.Username)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Email)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.PasswordHash)
+                @Html.DisplayNameFor(model => model.RoleName)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.ConfirmPassword)
+                @Html.DisplayNameFor(model => model.IsActive)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Role)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.CreatedAt)
-            </th>
-            <th></th>
+            <th>#</th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
+        @foreach (var item in Model) {
+            var status = item.IsActive == true ? "Active" : "Inactive";
+            var statusCSS = item.IsActive == true ? "badge text-bg-success" : "badge text-bg-danger";
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Username)
+                </td>
+                <td>
+                    @item.Email
+                </td>
+                <td>
+                    @item.RoleName
+                </td>
+                <td>
+                    <span class="@statusCSS">@status</span>
+                </td>
             <td>
-                @Html.DisplayFor(modelItem => item.UserID)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Username)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Email)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.PasswordHash)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ConfirmPassword)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Role)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CreatedAt)
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                @Html.ActionLink("Status", "Edit", new { id = item.UserID, queryType = MyWebsite.Models.UserVM.QueryType.Update }) |
+                @Html.ActionLink("Email", "Edit", new { id = item.UserID, queryType = MyWebsite.Models.UserVM.QueryType.UpdateEmail }) |
+                @Html.ActionLink("Username", "Edit", new { id = item.UserID, queryType = MyWebsite.Models.UserVM.QueryType.UpdateUsername }) |
+                @Html.ActionLink("Password", "Edit", new { id = item.UserID, queryType = MyWebsite.Models.UserVM.QueryType.UpdatePassword })
             </td>
         </tr>
 }
