--- a/MyWebsite/Views/Shared/_LayoutAdmin.cshtml
+++ b/MyWebsite/Views/Shared/_LayoutAdmin.cshtml
@@ -41,6 +41,12 @@
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Index">Users</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Contacts" asp-action="Index">Contacts</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Appointments" asp-action="Index">Appointments</a>
+                            </li>
                         }
                     </ul>
                     <ul class="navbar-nav flex-grow-0" style="float:right;padding-right:10%">
