--- a/MyWebsite/Views/Pages/Details.cshtml
+++ b/MyWebsite/Views/Pages/Details.cshtml
@@ -23,9 +23,8 @@
         {
             <tr>
                 <td>
-                    <a href="#" data-bs-toggle="modal" data-bs-target="#myModal">@item.SlugPageContent</a>
+                    <a href="#" data-bs-toggle="modal" data-bs-target="#myModal">@item.Title</a>
                 </td>
-                <td>@item.Title</td>
                 <td>@item.Header</td>
                 <td>@item.Body</td>
                 <td>@item.Footer</td>
