--- a/MyWebsite/Views/Pages/Details.cshtml
+++ b/MyWebsite/Views/Pages/Details.cshtml
@@ -8,7 +8,9 @@
 }
 
 <div class="container-fluid">
-    <h1 style="padding-top:100px">Details</h1>
+    <h4 style="padding-top:100px">Details of</h4>
+    <h1 class="text-danger">@oPage.Title PAGE</h1>
+    <hr />
 
     <table class="table table-bordered">
         <tr>
@@ -23,7 +25,7 @@
         {
             <tr>
                 <td>
-                    <a href="#" data-bs-toggle="modal" data-bs-target="#myModal">@item.Title</a>
+                    <a href="/PageContents/Edit/@item.PageContentId">@item.Title</a>
                 </td>
                 <td>@item.Header</td>
                 <td>@item.Body</td>
@@ -32,31 +34,6 @@
             </tr>
         }
     </table>
-</div>
-
-<!-- The Modal -->
-<div class="modal fade" id="myModal">
-    <div class="modal-dialog modal-xl">
-        <div class="modal-content">
-
-            <!-- Modal Header -->
-            <div class="modal-header">
-                <h4 class="modal-title">Modal Heading</h4>
-                <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-            </div>
-
-            <!-- Modal body -->
-            <div class="modal-body">
-                Modal body..
-            </div>
-
-            <!-- Modal footer -->
-            <div class="modal-footer">
-                <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
-            </div>
-
-        </div>
-    </div>
 </div>
 
 @if (oPage.Slug == "about")
@@ -99,6 +76,102 @@
     <!-- About End -->
 }
 
+
+@if (oPage.Slug == "appointment")
+{
+    var oAppointment = Model.Where(x => x.Slug == "appointment").FirstOrDefault() == null ? new PageVM() : Model.Where(x => x.Slug == "appointment").First();
+    var appointment = oAppointment.ListPageContent.Where(x => x.SlugPageContent == "appointment").FirstOrDefault() == null ? new MyWebsite.Models.PageContentVM() :
+                        oAppointment.ListPageContent.Where(x => x.SlugPageContent == "appointment").First();
+    <!-- Book Appointment Start -->
+    <div class="container-fluid appointment bg-light py-5">
+        <div class="container py-5">
+            <div class="row g-5 align-items-center">
+                <div class="col-lg-6 wow fadeInLeft" data-wow-delay="0.2">
+                    <div class="section-title text-start">
+                        <h4 class="sub-title pe-3 mb-0">@appointment.Title</h4>
+                        <h1 class="display-4 mb-4">@appointment.Header</h1>
+                        <p class="mb-4">@appointment.Body</p>
+                        <div class="row g-4">
+                            <div class="col-sm-8">
+                                <div class="video h-100">
+                                    <img src="@appointment.FilePath" class="img-fluid rounded w-100 h-100" style="object-fit: cover;" alt="">
+                                    <button type="button" class="btn btn-play" data-bs-toggle="modal" data-src="@appointment.Footer" data-bs-target="#videoModal">
+                                        <span></span>
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 wow fadeInRight" data-wow-delay="0.4s">
+                    <div class="appointment-form rounded p-5">
+                        <p class="fs-4 text-uppercase text-primary">Get In Touch</p>
+                        <h1 class="display-5 mb-4">Get Appointment</h1>
+                        <form>
+                            <div class="row gy-3 gx-4">
+                                <div class="col-xl-12">
+                                    <input type="text" required class="form-control py-3 border-primary bg-transparent text-black" placeholder="Full Name" />
+                                    <span class="text-danger"></span>
+                                </div>
+                                <div class="col-xl-6">
+                                    <input type="email" required class="form-control py-3 border-primary bg-transparent text-black" placeholder="Email" />
+                                    <span class="text-danger"></span>
+                                </div>
+                                <div class="col-xl-6">
+                                    <input type="text" required class="form-control py-3 border-primary bg-transparent text-black" placeholder="Phone" />
+                                    <span class="text-danger"></span>
+                                </div>
+                                <div class="col-xl-6">
+                                    <select required class="form-select py-3 border-primary bg-transparent" aria-label="select gender">
+                                        <option value="" selected>Your Gender</option>
+                                        <option value="1">Female</option>
+                                        <option value="2">Male</option>
+                                        <option value="3">Others</option>
+                                    </select>
+                                    <span class="text-danger"></span>
+                                </div>
+                                <div class="col-xl-6">
+                                    <input type="number" required class="form-control py-3 border-primary bg-transparent" placeholder="Age">
+                                    <span class="text-danger"></span>
+                                </div>
+                                <div class="col-12">
+                                    <textarea required class="form-control border-primary bg-transparent text-black" cols="30" rows="5" placeholder="Address"></textarea>
+                                    <span class="text-danger"></span>
+                                </div>
+                                <div class="col-12">
+                                    <textarea required class="form-control border-primary bg-transparent text-black" cols="30" rows="5" placeholder="Problem Details"></textarea>
+                                    <span class="text-danger"></span>
+                                </div>
+                                <div class="col-12">
+                                    <button type="button" class="btn btn-primary text-white w-100 py-3 px-5">SUBMIT NOW</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Modal Video -->
+    <div class="modal fade" id="videoModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content rounded-0">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Youtube Video</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <!-- 16:9 aspect ratio -->
+                    <div class="ratio ratio-16x9">
+                        <iframe class="embed-responsive-item" src="" id="video" allowfullscreen allowscriptaccess="always"
+                                allow="autoplay"></iframe>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Book Appointment End -->
+}
 
 
 
