--- a/MyWebsite/Views/PageContents/Edit.cshtml
+++ b/MyWebsite/Views/PageContents/Edit.cshtml
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-6">
-        <form asp-action="Edit">
+        <form asp-action="Edit" asp-controller="PageContents" method="post" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="PageContentId" />
             <div class="form-group">
@@ -18,7 +18,7 @@
                 <input asp-for="Title" class="form-control" />
                 <span asp-validation-for="Title" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            @* <div class="form-group">
                 <label asp-for="SlugPage" class="control-label"></label>
                 <input asp-for="SlugPage" class="form-control" />
                 <span asp-validation-for="SlugPage" class="text-danger"></span>
@@ -27,7 +27,7 @@
                 <label asp-for="SlugPageContent" class="control-label"></label>
                 <input asp-for="SlugPageContent" class="form-control" />
                 <span asp-validation-for="SlugPageContent" class="text-danger"></span>
-            </div>
+            </div> *@
             <div class="form-group">
                 <label asp-for="Header" class="control-label"></label>
                 <input asp-for="Header" class="form-control" />
@@ -43,17 +43,17 @@
                 <input asp-for="Footer" class="form-control" />
                 <span asp-validation-for="Footer" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            @* <div class="form-group">
                 <label asp-for="MediaId" class="control-label"></label>
                 <input asp-for="MediaId" class="form-control" />
                 <span asp-validation-for="MediaId" class="text-danger"></span>
-            </div>
+            </div> *@
             <div class="form-group">
                 <label asp-for="IsActive" class="control-label"></label>
                 <input asp-for="IsActive" class="form-control" />
                 <span asp-validation-for="IsActive" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            @* <div class="form-group">
                 <label asp-for="UploadedBy" class="control-label"></label>
                 <input asp-for="UploadedBy" class="form-control" />
                 <span asp-validation-for="UploadedBy" class="text-danger"></span>
@@ -72,14 +72,17 @@
                 <label asp-for="FilePath" class="control-label"></label>
                 <input asp-for="FilePath" class="form-control" />
                 <span asp-validation-for="FilePath" class="text-danger"></span>
-            </div>
+            </div> *@
+
+            <input type="file" name="UploadedFile" />
+
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
     </div>
     <div class="col-md-6">
-        <img src="" />
+        <img src="@Model.FilePath" style="width:500px" />
     </div>
 </div>
 
