--- a/MyWebsite/Views/PageContents/Edit.cshtml
+++ b/MyWebsite/Views/PageContents/Edit.cshtml
@@ -53,8 +53,14 @@
             <input type="hidden" asp-for="MediaId" />
             <div class="form-group">
                 <label asp-for="IsActive" class="control-label"></label>
-                <input asp-for="IsActive" class="form-control" />
+                @* <input asp-for="IsActive" type="text" /> *@
+                <select asp-for="IsActive">
+                    <option value="true">Active</option>
+                    <option value="false">Inactive</option>
+                </select>
                 <span asp-validation-for="IsActive" class="text-danger"></span>
+
+                
             </div>
             @* <div class="form-group">
                 <label asp-for="UploadedBy" class="control-label"></label>
