--- a/MyWebsite/Views/Pages/Index.cshtml
+++ b/MyWebsite/Views/Pages/Index.cshtml
@@ -46,8 +46,8 @@
             </td>
             <td>
                 @* <a asp-action="Edit" asp-route-id="@item.PageId">Edit</a> | *@
-                <a href="Pages/Details?slug=@item.Slug" target="_blank">Details</a> |
-                <a href="@item.Content" target="_blank">View</a>
+                <a href="Pages/Details?slug=@item.Slug" target="_blank">Edit</a> |
+                <a href="@item.Content" target="_blank">Go to Website</a>
             </td>
             @* <td>
             @Html.DisplayFor(modelItem => item.Slug)
