--- a/MyWebsite/Views/Pages/Index.cshtml
+++ b/MyWebsite/Views/Pages/Index.cshtml
@@ -46,7 +46,7 @@
             </td>
             <td>
                 @* <a asp-action="Edit" asp-route-id="@item.PageId">Edit</a> | *@
-                <a href="Pages/Details?slug=@item.Slug" target="_blank">Edit</a> |
+                <a href="/Pages/Details?slug=@item.Slug" target="_blank">Edit</a> |
                 <a href="@item.Content" target="_blank">Go to Website</a>
             </td>
             @* <td>
