--- a/MyWebsite/Views/Home/Contact.cshtml
+++ b/MyWebsite/Views/Home/Contact.cshtml
@@ -140,9 +140,20 @@
                     <a class="btn btn-lg-square btn-light rounded-circle mx-2" href="@oLinkedin.Body"><i class="fab fa-linkedin-in"></i></a>
                 </div>
                 <div class="rounded h-100">
-                    <iframe class="rounded w-100"
+                    <div class="mapouter">
+                        <div class="gmap_canvas">
+                            <iframe width="600" 
+                                height="500" 
+                                id="gmap_canvas"
+                                class="rounded w-100"
+                                src="@map.Header"
+                                frameborder="0" scrolling="no" marginheight="0" marginwidth="0">
+                            </iframe>
+                        </div>
+                    </div>
+                    @* <iframe class="rounded w-100"
                             style="height: 500px;" src="@map.Header"
-                            loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                            loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> *@
                 </div>
             </div>
         </div>
