--- a/MyWebsite/Views/Shared/_LayoutAdmin.cshtml
+++ b/MyWebsite/Views/Shared/_LayoutAdmin.cshtml
@@ -4,13 +4,13 @@
     int? UserID = Context.Session.GetInt32("UserID");
     string? Username = Context.Session.GetString("Username");
 }
-
+3
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - MyWebsite Admin</title>
+    <title>@ViewData["Title"] - Admin</title>
     <script type="importmap"></script>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
@@ -20,7 +20,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3 bg-primary">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">MyWebsite</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Admin</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                 aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
