--- a/MyWebsite/Views/Login/Index.cshtml
+++ b/MyWebsite/Views/Login/Index.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
-<h1>Login</h1>
+<h1>Login to Admin Panel</h1>
 <hr />
 <div class="row">
     <div class="col-md-4">
