--- a/MyWebsite/Views/Shared/_LayoutAdmin.cshtml
+++ b/MyWebsite/Views/Shared/_LayoutAdmin.cshtml
@@ -19,7 +19,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3 bg-primary">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Admin</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index" target="_blank">Go to Website</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                 aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -29,7 +29,7 @@
                         @if (UserID == null)
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Login" asp-action="Index">Login</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Login" asp-action="Index">Login to Admin Panel</a>
                             </li>
                         }
                         else
@@ -38,13 +38,13 @@
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Pages" asp-action="Index">Pages</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Index">Users</a>
-                            </li>
-                            <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Contacts" asp-action="Index">Contacts</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Appointments" asp-action="Index">Appointments</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Index">Users</a>
                             </li>
                         }
                     </ul>
@@ -58,7 +58,7 @@
                                 <ul class="dropdown-menu">
                                     <li><a class="dropdown-item" href="#">Profile</a></li>
                                     <li><a class="dropdown-item" href="#">Settings</a></li>
-                                    <li><a class="dropdown-item" href="#">Password Change</a></li>
+                                    <li><a class="dropdown-item" href="/Userspass/PasswordChange">Password Change</a></li>
                                     <li><hr class="dropdown-divider"></li>
                                     <li><a class="dropdown-item" href="/Login/Logout">Log out</a></li>
                                 </ul>
