--- a/MyWebsite/Views/Home/Index.cshtml
+++ b/MyWebsite/Views/Home/Index.cshtml
@@ -243,7 +243,7 @@
                             <div class="blog-centent p-4">
                                 <div class="d-flex justify-content-between mb-4">
                                     <p class="mb-0 text-muted"><i class="fa fa-calendar-alt text-primary"></i> @Convert.ToDateTime(listOurBlog[i].UploadedAt).ToString("dd MMM yyyy")</p>
-                                    <a href="#" class="text-muted"><span class="fa fa-comments text-primary"></span> Comment(s)</a>
+                                    <a href="javascript:void(0)" class="text-muted"><span class="fa fa-comments text-primary"></span> Comment(s)</a>
                                 </div>
                                 <a href="#" class="h4">@listOurBlog[i].Title</a>
                                 <p class="my-4">@listOurBlog[i].Body</p>
