--- a/MyWebsite/Views/PageContents/Edit.cshtml
+++ b/MyWebsite/Views/PageContents/Edit.cshtml
@@ -32,17 +32,20 @@
             <input type="hidden" asp-for="SlugPageContent" />
             <div class="form-group">
                 <label asp-for="Header" class="control-label"></label>
-                <input asp-for="Header" class="form-control" />
+                @* <input asp-for="Header" class="form-control" /> *@
+                <textarea asp-for="Header" class="form-control" rows="5"></textarea>
                 <span asp-validation-for="Header" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Body" class="control-label"></label>
-                <input asp-for="Body" class="form-control" />
+                @* <input asp-for="Body" class="form-control" /> *@
+                <textarea asp-for="Body" class="form-control" rows="5"></textarea>
                 <span asp-validation-for="Body" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Footer" class="control-label"></label>
-                <input asp-for="Footer" class="form-control" />
+                @* <input asp-for="Footer" class="form-control" /> *@
+                <textarea asp-for="Footer" class="form-control" rows="5"></textarea>
                 <span asp-validation-for="Footer" class="text-danger"></span>
             </div>
             @* <div class="form-group">
